Add Serializer + reduce field/method access